--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,7 @@
                 {% endblock %}
             </nav>
             {% endif %}
-            <div class="container" id="block-content">
+            <div id="block-content">
                 <div class="row">
                     <div class="col-xl- p1">
                         {% block content %}
