--- a/templates/confabulation/participantView.html
+++ b/templates/confabulation/participantView.html
@@ -2,7 +2,6 @@
 {% block title %}{{participant.name}}{% endblock %}
 {% load story_list %}
 {% load chain_list %}
-{% load theme_list %}
 {% load story_list_thumb %}
 {% load theme_with_story_list %}
 {% load chain_with_theme_list %}
@@ -14,15 +13,14 @@
 <h4>participation group: {{ participant.participation_group }} </h4>
 
 {% endif %}
-<img src="{{cl}}">
 
-<div class="container">
+<div>
     {% if participant_stories %}
     {% story_list_thumb participant_stories 150 %}
     {% endif %}
 </div>
 
-<div class="container">
+<div>
     {% if story_connections_intra %}
     <h3>Story to Story connections</h3>
     {% story_to_story_connection_list story_connections_intra %}
