--- a/templates/confabulation/participantView.html
+++ b/templates/confabulation/participantView.html
@@ -9,9 +9,10 @@
 {% block content %}
 {% if participant %}
 
+<div class="view_title">
 <h1> {{ participant.name }}</h1>
 <h4>participation group: {{ participant.participation_group }} </h4>
-
+</div>
 {% endif %}
 
 <div>
