--- a/templates/confabulation/analysisView.html
+++ b/templates/confabulation/analysisView.html
@@ -4,23 +4,22 @@
 {% block title %} Analysis: {{analysis_point.name}}{% endblock %}
 {% block content %}
 
-<div class="Analysis">
     {% if analysis_point %}
+<div class="view_title">
 
     {% colored_title analysis_point.name analysis_point.color_code %}
 
     Analysis Type:
     <a href="/analysis_type/{{analysis_point.analysis_type.id}}/">        {{analysis_point.analysis_type.name}}</a>
-<div class="description">
+
     {{analysis_point.description}}
 </div>
 {% endif %}
-<div>
     {% if stories %}
+<div class="view_title">
     <h3>Stories</h3>
+</div>
     {% story_list_thumb stories 150%}
     {% endif %}
-</div>
 
-</div>
 {% endblock%}
