--- a/confabulation/staticfiles/mystyles.css
+++ b/confabulation/staticfiles/mystyles.css
@@ -5,24 +5,34 @@
     padding-right: 20px;
 }
 
-.sidebar {
-    display: none;
-}
+/* .sidebar { */
+/*     display: none; */
+/* } */
 
-.sidebar.active {
+/* .sidebar.active { */
+/*     display: block; */
+/* } */
+
+.sidebar_left {
     display: block;
-}
-
-#sidebar_left {
     min-width: 250px;
     max-width: 250px;
     min-height: 100vh;
 }
 
-#sidebar_right {
+.sidebar_left.active {
+    display:none;
+}
+
+.sidebar_right {
+    display: block;
     min-width: 300px;
     max-width: 350px;
     min-height: 100vh;
+}
+
+.sidebar_right.active {
+    display:none;
 }
 
 .sidebar .sidebar-header {
@@ -44,9 +54,6 @@
     margin-bottom: .5rem;
     margin-top: .5rem;
 }
-/* .sidebar ul li a:hover { */
-/*     background: #fff; */
-/* } */
 
 .sidebar li {
     margin-bottom: 1rem;
@@ -57,6 +64,7 @@
 
 .sidebar ul li.active > a, a[aria-expanded="true"] {
 }
+
 ul ul a {
     font-size: 0.9em !important;
     padding-left: 30px !important;
