--- a/templates/sidebar_left.html
+++ b/templates/sidebar_left.html
@@ -1,27 +1,30 @@
 {% block sidebar_left %}
-<ul class="collapse components navbar-nav">
-{% load colored_link %}
+{% load ap_link %}
     {% if sidebar_left %}
+<div class="sidebar_left" id="sidebar_left">
+<ul class="list-unstyled  components" >
     {% if sidebar_left.taxonomy %}
-    <li >
-        <h3> <a href="#taxonomySubMenu" data-toggle="collapse" aria-expanded="true" class="dropdown-toggle">Taxonomy</a></h3>
-        <ul class="collapse list-unstyled show" id="taxonomySubMenu">
-            {% for ptype, list in sidebar_left.taxonomy.items %}
-            <li>
-                <h5>  <a href="#ap_{{ptype|cut:' '}}" data-toggle="collapse"  aria-expanded="true" class="dropdown-toggle"  >{{ ptype}}</a></h5>
-                <ul class="collapse list-unstyled show" id="ap_{{ptype|cut:' '}}">
-                    {% for p in list %}
-                    <li>
-                        {% colored_link p.name p.color_code p.link %}
+        <h3> Taxonomy </h3>
+            {% for t in sidebar_left.taxonomy %}
+        <li>
+            <div>
+                <h5>  <a href="{{t.url}}"> {{t.name}}</a>
+                    <a href="#ap_{{t.name|cut:' '}}" data-toggle="collapse"  aria-expanded="true" class="dropdown-toggle"  ></a></h5>
+                <div class="collapse list-unstyled show" id="ap_{{t.name|cut:' '}}">
+                    {% for p in t.ap_list %}
+                        {% ap_link p.name p.color_code p.link %}
                         {% endfor%}
-                    </li>
-                </ul>
+                </div>
+            </div>
             </li>
 
             {% endfor %}
-        </ul>
-    </li>
-    {% endif %}
     {% endif %}
 </ul>
+</div>
+<label class="smallbutton">
+<input id="sidebar_left_button" type="checkbox" checked  data-toggle="toggle" data-on="X" data-off="&#10004;"  data-size="small" data-onstyle="info">
+</label>
+{% endif %}
 {% endblock %}
+ 
