--- a/templates/sidebar_right.html
+++ b/templates/sidebar_right.html
@@ -9,7 +9,7 @@
     <li>
         <h3> Intra-connections</h3>
     {% if sidebar_right.intraconnections %}
-        <h5><a href="#intraSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Chains</a></h5>
+        <h5><a href="#intraSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Chain</a></h5>
         <div class="collapse show" id="intraSubmenu">
             {% chain_with_theme_list sidebar_right.intraconnections "intra" %}
         </div>
