--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -47,6 +47,15 @@
                     </li>
                 </ul>
             </li>
+            <li>
+                <div class="input-group input-group-sm mb-3">
+                    <form id="searchform" action="/search/" method="get" accept-charset="utf-8">
+                        <input type="text" class="form-control" placeholder="Search" aria-describedby="basic-addon2" name="search">
+                    </form>
+                </div>
+
+
+            </li>
         </ul>
     </div>
 </nav>
