prety pretty pages

--- a/confabulation/staticfiles/mystyles.css
+++ b/confabulation/staticfiles/mystyles.css
@@ -283,7 +283,12 @@ Code taken from here: https://codepen.io/svnt/pen/beEgre
     background: #FF7D7D;
 }
 
-.giant404{
+.giant{
     font-size: 200px;
     font-weight: bolder;
+}
+
+.tiny{
+    font-size: 12px;
+    font-weight: lighter;
 }
