--- a/templates/confabulation/error_500.html
+++ b/templates/confabulation/error_500.html
@@ -2,11 +2,19 @@
 
 {% block content %}
 
-Well, this is embarrassing... Something is not working.
+<div class="block500">
+    <div class="giant">
+        500 :(((
+    </div>
 
-You can go back to the <a href="/">start page</a>.
+    <h1>Server Error</h1>
+Well, this is embarrassing... you should not ever see this. Something is not right.
 
+</br>
+        <a class="btn btn-primary" href="/" role="button">Go back to the Start Page</a>
 
-(If you want to help, pls make a note of the url and send it to the author.)
+        <div class="tiny">
+            (If you want to help, pls make a note of the url and send it to the author.)</div>
+</div>
 
 {% endblock %}
