--- a/templates/confabulation/error_404.html
+++ b/templates/confabulation/error_404.html
@@ -6,15 +6,15 @@
 
 
 <div class="block404">
-    <div class="giant404">
+    <div class="giant">
         404 :(
     </div>
 
+    <h1>Page Not Found.</h1>
        Well, this is sad... unfortunately the page you are looking for can't be found.
+</br>
 
-        Maybe you want to go back to the
-
-        <a class="btn btn-primary" href="/" role="button">Start Page</a>?
+        <a class="btn btn-primary" href="/" role="button">Go back to the Start Page</a>
 </div>
 
 {% endblock %}
