disable context menu
The highly disputer practice of disabling context menu (eight click).
Should prevent users from downloading images.

Replaced by a single option to open links in new tab.

TBD: small images should be opened in a new page, not as a link, because images
are IP too.
Also, can the small photos go through cloudinary? not that it matters much.

--- a/confabulation/staticfiles/mystyles.css
+++ b/confabulation/staticfiles/mystyles.css
@@ -292,3 +292,14 @@ Code taken from here: https://codepen.io/svnt/pen/beEgre
     font-size: 12px;
     font-weight: lighter;
 }
+
+
+.custom-menu {
+    z-index:1000;
+    position: absolute;
+    background-color:#FFFFFF;
+    border: 1px solid black;
+    padding: 2px;
+    border-radius: 5px;
+}
+
