nicely resizing images
Loaded to fit the frame; when clicked size to original, then back again

--- a/confabulation/staticfiles/mystyles.css
+++ b/confabulation/staticfiles/mystyles.css
@@ -303,3 +303,19 @@ Code taken from here: https://codepen.io/svnt/pen/beEgre
     border-radius: 5px;
 }
 
+.fit{
+    display: grid;
+    height: 100%;
+    max-width: 100%;
+    max-height: 100vh;
+    margin: auto;
+    -webkit-user-select: none;
+}
+
+.zoomin{
+    cursor: zoom-in;
+}
+
+.zoomout{
+    cursor: zoom-out;
+}
