--- a/templates/confabulation/imageView.html
+++ b/templates/confabulation/imageView.html
@@ -2,5 +2,5 @@
 {% block content %}
 <h1>{{image_name}}</h1>
 
-<img src="{{image_url}}">
+<img src="{{image_url}}" class="fit zoomable zoomin">
 {% endblock %}
