prevent_content_download (#87)
* disable context menu

The highly disputer practice of disabling context menu (eight click).
Should prevent users from downloading images.

Replaced by a single option to open links in new tab.

TBD: small images should be opened in a new page, not as a link, because images
are IP too.
Also, can the small photos go through cloudinary? not that it matters much.

* image view and nice error handling for missing images

* nicely resizing images

Loaded to fit the frame; when clicked size to original, then back again

--- a/confabulation/staticfiles/mystyles.css
+++ b/confabulation/staticfiles/mystyles.css
@@ -292,3 +292,30 @@ Code taken from here: https://codepen.io/svnt/pen/beEgre
     font-size: 12px;
     font-weight: lighter;
 }
+
+
+.custom-menu {
+    z-index:1000;
+    position: absolute;
+    background-color:#FFFFFF;
+    border: 1px solid black;
+    padding: 2px;
+    border-radius: 5px;
+}
+
+.fit{
+    display: grid;
+    height: 100%;
+    max-width: 100%;
+    max-height: 100vh;
+    margin: auto;
+    -webkit-user-select: none;
+}
+
+.zoomin{
+    cursor: zoom-in;
+}
+
+.zoomout{
+    cursor: zoom-out;
+}
