--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -1,5 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="navbar-collapse" id="navbarSupportedContent">
+        <!-- Toggle button for left sidebar -->
+        <input id="sidebar_left_button" type="checkbox" checked title="left sidebar">
+
         <ul class="navbar-nav mr-auto">
             <li class="nav-item dropdown">
                 <a class="nav-link"  id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -59,5 +62,8 @@
 
             </li>
         </ul>
+        <!-- Toggle button for right sidebar-->
+        <input id="sidebar_right_button" type="checkbox" checked title="right sidebar">
+
     </div>
 </nav>
