--- a/templates/confabulation/storyView.html
+++ b/templates/confabulation/storyView.html
@@ -47,7 +47,7 @@
 
     <h3>Video</h3>
     {% if video_url %}
-    <video width="530" height="440" controls controlsList="nodownload">
+    <video width="95%" controls controlsList="nodownload">
         <source src={{ video_url }} type="video/mp4"></source>
     </video>
     {% else %}
