--- a/templates/frontpage.html
+++ b/templates/frontpage.html
@@ -4,24 +4,39 @@
 
 {% block content %}
 <div class="body_text" id="front_body">
-    <h1>Welcome</h1>
+    <div class="row">
 
-<p>This website is a visual representation of the PhD research work of <a href="/author">Eszter Biro</a>. You can read <a href="/about"> about the research here</a>, and you can read the entire thesis work <a href="">here</a>. </p>
-<p>
-    <b>Here is a short intorduction about the taxonomy used in this research:</b>
-</br>
-<video width="530" height="440" controls >
-            <source src={{ video_url }} type="video/mp4"></source>
-        </video>
+        <div class="col">
+        <h1>Welcome</h1>
+            <p>This website is a visual representation of the PhD research work of <a href="/author">Eszter Biro</a>.
+            </br>
+                You can read <a href="/about"> about the research here</a>, and you can read the entire thesis work <a href="">here</a>. </p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            Here is a short introduction about the taxonomy used in this research:
 
-</br> Or you can just start browsing.
-    <h3><a href="/participant/">Participants</a></h3>
-    <h3><a href="/story/">Stories</a></h3>
-</p>
+<video width="530" controls >
+<source src={{ video_url }} type="video/mp4"></source>
+</video>
+        </div>
+        <div class="col">
+            <div class="row"></div>
+            <div class="row align-items-end">
+                <div class="col">
+            Or you can just start browsing.
+            (You will be asked to log in.)
+<h3><a href="/participant/">Participants</a></h3>
+<h3><a href="/story/">Stories</a></h3>
+<h3><a href="{{confabulation_url}}">Confabulation</a></h3>
+<h3><a href="{{going_beyond_url}}">Going Beyond</a></h3>
 
-<p>
-If you are Eszter, then a link to the <a href="/admin/"> admin page </a> migth be useful. 
-</p>
-</p>
+Please be aware that all photos and videos displayed on this site are properties of the participants. They are shared specifically for the purpose of this research, and it is not allowed to copy, publish or otherwise reuse them without their owners consent.
+                </div>
+            </div>
+        </div>
+    </div>
+        If you are Eszter, then this link to the <a href="/admin/"> admin page </a> migth be useful. 
 </div>
 {% endblock %}
