--- a/templates/confabulation/stories.html
+++ b/templates/confabulation/stories.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load story_list_thumb %}
 
 {% block title %}Stories{% endblock %}
 
@@ -6,15 +7,6 @@
 <h1>Stories</h1>
 
 {% if story_list %}
-<ul>
-    {% for story in story_list %}
-    <li><a href="/story/{{ story.id }}/">{{ story.name }}
-        {% if story.image_link %}
-<img src="{{story.image_link}}" width=100>
-{% endif %}
-</a>
-    </li>
-    {% endfor %}
-</ul>
+    {% story_list_thumb story_list 150 %}
 {% endif %}
 {% endblock %}
