--- a/templates/confabulation/stories.html
+++ b/templates/confabulation/stories.html
@@ -4,6 +4,11 @@
 {% block title %}Stories{% endblock %}
 
 {% block content %}
+
+{% block graph %}
+{% include "confabulation/graph.html" %}
+{% endblock %}
+
 <h1>Stories</h1>
 
 {% if story_list %}
