--- a/templates/confabulation/themes.html
+++ b/templates/confabulation/themes.html
@@ -4,12 +4,13 @@
 
 {% block content %}
 <h1>Themes</h1>
-
 {% if theme_list %}
 <ul>
     {% for theme in theme_list %}
-    <li><a href="/theme/{{ theme.id }}/">{{ theme.name }}</a></li>
+    <li><a href="{{ theme.url }}/">{{ theme.name }}</a></li>
     {% endfor %}
 </ul>
 {% endif %}
+
 {% endblock %}
+
